deploy/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppe-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: hub.k8s.ucar.edu/afoster/ppeviewer:0.0.1
        ports:
        - containerPort: 3838
