deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppe-viewer
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3838
    protocol: TCP
  selector:
    app: web-app
